--- a/dataevalservice/src/main/resources/messages.properties
+++ b/dataevalservice/src/main/resources/messages.properties
@@ -44,3 +44,15 @@ page.update.successful = Page {0}  updated successfully
 page.update.unsuccessful = Page could not be updated
 page.delete.successful	= Page {0} deleted successfully
 page.delete.unsuccessful = Page could not be deleted
+
+
+pageSections.nodata.found = No Page Section data found
+pageSections.search.nodata.found = No Page Section data found
+pageSection.id.invalid = Invalid Page Section Id
+pageSection.nodata.found = No Page Section found
+pageSection.insert.successful = Page Section {0}  saved successfully
+pageSection.insert.unsuccessful = Page Section could not be saved
+pageSection.update.successful = Page Section {0}  updated successfully
+pageSection.update.unsuccessful = Page Section could not be updated
+pageSection.delete.successful	= Page Section {0} deleted successfully
+pageSection.delete.unsuccessful = Page Section could not be deleted
