User Type Base Fileds declaration

--- a/dataevalservice/src/main/resources/messages.properties
+++ b/dataevalservice/src/main/resources/messages.properties
@@ -56,3 +56,16 @@ pageSection.update.successful = Page Section {0}  updated successfully
 pageSection.update.unsuccessful = Page Section could not be updated
 pageSection.delete.successful	= Page Section {0} deleted successfully
 pageSection.delete.unsuccessful = Page Section could not be deleted
+
+
+
+users.nodata.found = No User data found
+users.search.nodata.found = No User data found
+user.id.invalid = Invalid User Id
+user.nodata.found = No User found
+user.insert.successful = User {0}  saved successfully
+user.insert.unsuccessful = User could not be saved
+user.update.successful = User {0}  updated successfully
+user.update.unsuccessful = User could not be updated
+user.delete.successful	= User {0} deleted successfully
+user.delete.unsuccessful = User could not be deleted
