--- a/dataevalservice/src/main/resources/messages.properties
+++ b/dataevalservice/src/main/resources/messages.properties
@@ -69,3 +69,15 @@ user.update.successful = User {0}  updated successfully
 user.update.unsuccessful = User could not be updated
 user.delete.successful	= User {0} deleted successfully
 user.delete.unsuccessful = User could not be deleted
+
+
+patientlog.nodata.found = No Patient Call Log data found
+patientlog.search.nodata.found = No Patient Call Log data found
+patientlog.id.invalid = Invalid Patient Call Log Id
+patientlog.nodata.found = No Patient Call Log found
+patientlog.insert.successful = Patient Call Log {0}  saved successfully
+patientlog.insert.unsuccessful = Patient Call Log could not be saved
+patientlog.update.successful = Patient Call Log {0}  updated successfully
+patientlog.update.unsuccessful = Patient Call Log could not be updated
+patientlog.delete.successful	= Patient Call Log {0} deleted successfully
+patientlog.delete.unsuccessful = Patient Call Log could not be deleted
